static/style.css
a:visited {
    color: #e37fca;
}

body {
	font-family: sans-serif ;
	background-image: url("/gifs/starsoldweb.gif") ;
	color: #eee;
}

header {
	max-width: 800px ;
	margin: auto ;
    /* background: #25064c; */
}

main {
	max-width: 800px ;
	margin: auto ;
    background: #25064c;
}

img {
	max-width: 100% ;
}

header h1 {
	text-align: center ;
}

footer {
	max-width: 800px ;
	margin: auto ;
    background: #25064c;
	text-align: center ;
	clear: both ;
}

/* NAVIGATION */

.site-nav {
	display: flex;
    background: #25064c;
}

.site-nav a {
	display: block;
	padding: 1rem;
}

.site-nav .logo {
	font-weight: bold;
	padding-left: 0;
}

.main-menu {
	display: flex;
	list-style: none;
	margin: 0;
	padding: 0;
}

@media screen and (max-width: 48rem) {
	.site-nav,
	.main-menu {
		flex-direction: column;
	}

	.site-nav a {
		padding: 0.5rem;
		padding-left: 0;
	}
}

/* LISTS */

.post-snippet {
	margin-bottom: 1rem;
}

.post-snippet h3 {
	margin-bottom: 0.25rem;
}

